upd: mounted GarminSDK

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,22 @@ services:
     volumes:
       # Optional: mount a volume for persistent build outputs
       - garmin-builds:/workspace/analog-face/build
+      - hs_dev_mount:/external/hs_dev:ro
     networks:
       - garmin-dev-network
 
 volumes:
   garmin-builds:
     driver: local
+  hs_dev_mount:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=nas-home.local,nolock,ro"
+      device: ":/volume1/hs_dev"
 
 networks:
   garmin-dev-network:
     driver: bridge
+
+
