--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,20 @@ services:
     build: .
     container_name: garmin-watchface-dev
     working_dir: /workspace/analog-face
-    stdin_open: true
-    tty: true
+    environment:
+      - USER=ubuntu
+      - PASSWORD=ubuntu
+    ports:
+      - "6080:80"     # for browser-based GUI
     volumes:
       # Optional: mount a volume for persistent build outputs
       - garmin-builds:/workspace/analog-face/build
       - hs_dev_mount:/mnt/hs_dev:ro
     networks:
       - garmin-dev-network
+    stdin_open: true
+    tty: true
+    command: tail -f /dev/null
     
 volumes:
   garmin-builds:
