add: startup.sh

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     environment:
      - TZ=Europe/London
     tty: true
-
+    command: /startup.sh
+    
 volumes:
   garmin-builds:
     driver: local
